--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,27 @@ ul, ol {
 .header {
     padding-top: 20px;
     padding-bottom: 20px;
+    display: flex;
+    align-items: center;
 }
 .container {
-    width: 1166px;
+    width: 1440px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
     outline: 2px solid red;
+}
+.header-navigation {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    margin-left: 156px;
+}
+
+.header-container {
+    display: flex;
+    gap: 332px;
+    padding-right: 156px;
 }
 .header-logo {
     color:  #4d5ae5;
@@ -50,6 +64,10 @@ ul, ol {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
+.header-menu {
+    display: flex;
+    gap: 24px;
+}
 
 .header-menu-link {
     color: #2E2F42;
@@ -61,8 +79,10 @@ ul, ol {
 .header-menu-link:hover, .header-menu-link:focus {
     color: #404bbf;
 }
-.header-adress {
+.header-contacts {
     font-style: normal;
+    display: flex;
+    gap: 40px;
 }
 .header-contacts-link {
     color: #434455;
@@ -87,15 +107,25 @@ ul, ol {
     line-height: 1.07;
     letter-spacing: 0.02em;
     padding-bottom: 48px;
+    margin: 0 auto;
+    width: 496px;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
 .section-button {
     font-weight: 500;
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: flex-start;
 
 }
 .section-button:hover, .section-button:focus {
@@ -105,6 +135,26 @@ ul, ol {
 .section-advantages {
     margin-bottom: 120px;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+.section-advantages-list {
+    display: flex;
+    gap: 24px;
+}
+
 .advantages-list-title {
     color: #2E2F42;
     font-size: 20px;
@@ -138,6 +188,9 @@ ul, ol {
 
 .team-list {
     padding-bottom: 120px;
+    display: flex;
+    gap: 24px;
+    justify-content: center;
 }
 .team-item {
     background-color: #FFFFFF;
@@ -175,6 +228,10 @@ ul, ol {
 
 .portfolio-list {
     padding-bottom: 120px;
+    display: flex;
+    gap: 24px 80px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .portfolio-item-title {
@@ -202,7 +259,7 @@ ul, ol {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    text-transform: uppercase;   
+    text-transform: uppercase;  
 }
 
 .footer-logo {
@@ -211,8 +268,7 @@ ul, ol {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    text-transform: uppercase; 
-    padding-top: 101.5px;
+    text-transform: uppercase;
     padding-bottom: 17.5px;
 }
 
