--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+}
+
 p, h1,h2,h3,h4,h5,h6 {
     margin-top: 0;
     margin-bottom: 0;
@@ -24,9 +28,12 @@ ul, ol {
 }
 .header {
     padding-top: 20px;
+    padding: 0 15px;
     padding-bottom: 20px;
     display: flex;
     align-items: center;
+    border-bottom: 1px solid #e7e9fc;
+    width: 1158px;
 }
 .container {
     width: 1440px;
