--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,12 @@ ul, ol {
     padding-left: 0;
 }
 .header {
-    padding-top: 20px;
-    padding: 0 15px;
-    padding-bottom: 20px;
     display: flex;
     align-items: center;
+    border-bottom: 1px solid #e7e9fc;
+    padding: 0 15px;
 }
+
 .header-navigation {
     display: flex;
     flex-grow: 1;
@@ -43,9 +43,10 @@ ul, ol {
 .header-container {
     display: flex;
     gap: 332px;
-    border-bottom: 1px solid #e7e9fc;
     width: 1158px;
-    padding: 0 15px;
+    margin: 0 auto;
+    padding: 24px 0;
+    margin-right: 76px;
 }
 .header-logo {
     color:  #4d5ae5;
