--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@ ul, ol {
     display: flex;
     align-items: center;
     border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+    display: flex;
+    gap: 332px;
+    width: 1158px;
+    margin: 0 auto;
     padding: 0 15px;
 }
 
@@ -40,14 +47,6 @@ ul, ol {
     align-items: center;
 }
 
-.header-container {
-    display: flex;
-    gap: 332px;
-    width: 1158px;
-    margin: 0 auto;
-    padding: 24px 0;
-    margin-right: 76px;
-}
 .header-logo {
     color:  #4d5ae5;
     font-family: 'Raleway', sans-serif;
@@ -55,6 +54,7 @@ ul, ol {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
 }
 
 .heder-logo-span {
@@ -64,14 +64,15 @@ ul, ol {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-right: 76px
 }
+
 .header-menu {
     display: flex;
     gap: 40px;
+}
+.header-menu-item {
     padding: 24px 0;
 }
-
 .header-menu-link {
     color: #2E2F42;
     font-size: 16px;
