--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,10 @@ ul, ol {
     flex-grow: 1;
     justify-content: space-between;
     align-items: center;
+}
+.container-navigation {
     padding: 24px 0;
 }
-
 .header-logo {
     color:  #4d5ae5;
     font-family: 'Raleway', sans-serif;
