--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ ul, ol {
     margin-right: 76px;
 }
 
-.heder-logo-span {
+.header-logo-span {
     color: #2E2F42;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
