--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ ul, ol {
     border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
+.container {
     display: flex;
     gap: 332px;
     width: 1158px;
