--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ ul, ol {
     margin-bottom: 0;
     padding-left: 0;
 }
+
+/*HEADER*/
+
 .header {
     display: flex;
     align-items: center;
@@ -96,9 +99,12 @@ ul, ol {
 .header-contacts-link:hover, .header-contacts-link:focus {
     color: #404bbf;
 }
+
+/*section one*/
+
 .section {
     background-color: #2E2F42;
-    padding: 188px 472px 292px 472px;
+    padding: 188px;
     margin-bottom: 120px;
 }
 .section-title {
@@ -107,27 +113,21 @@ ul, ol {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    padding-bottom: 48px;
-    margin: 0 auto;
-    width: 496px;
     max-width: 496px;
-    margin: 0 auto;
 }
 
 .section-button {
+    display: block;
     font-weight: 500;
-    background-color: #4D5AE5;
+    background-color: #4d5ae5;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
     border: none;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    display: inline-flex;
-    padding: 16px 32px;
-    align-items: flex-start;
-
+    min-width: 169px;
+    height: 56px;
 }
 .section-button:hover, .section-button:focus {
     background-color: #404BBF
@@ -171,6 +171,8 @@ ul, ol {
     letter-spacing: 0.02em;
 }
 
+/*section two*/
+
 .team {
     background-color: #F4F4FD;
     margin-bottom: 120px;
@@ -213,6 +215,8 @@ ul, ol {
     letter-spacing: 0.02em;
 }
 
+/*section thee*/
+
 .portfolio {
     background-color: #FFFFFF;
 }
@@ -249,6 +253,8 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
+/*FOOTER*/
 
 .footer {
     background-color: #2E2F42;
