--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ ul, ol {
 
 .section {
     background-color: #2E2F42;
-    padding: 188px;
+    padding: 188px 0;
     margin-bottom: 120px;
 }
 .section-title {
