--- a/css/style.css
+++ b/css/style.css
@@ -157,22 +157,12 @@ ul, ol {
 
 .team {
     background-color: #F4F4FD;
-    margin-bottom: 120px;
     padding: 120px 0;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+    position: fixed;
+    transform: scale(0);
   }
   
 .team-title {
@@ -195,6 +185,9 @@ ul, ol {
 .team-item {
     background-color: #FFFFFF;
 }
+.team-item-one .team-item-two{
+    width: calc((100% - 72px) / 4);
+}
 .team-item-title {
     color: #2E2F42;
     text-align: center;
@@ -213,7 +206,7 @@ ul, ol {
     letter-spacing: 0.02em;
 }
 
-/*section thee*/
+/*section three*/
 
 .portfolio {
     background-color: #FFFFFF;
