--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ ul, ol {
 .section {
     background-color: #2E2F42;
     padding: 188px 0;
-    margin-bottom: 120px;
 }
 .section-title {
     color: #ffffff;
@@ -133,16 +132,24 @@ ul, ol {
     background-color: #404BBF
 }
 
+/*section two*/
+.section-advantages {
+    padding: 120px 0;
+}
 .advantages-list-title {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .section-advantages-list {
     display: flex;
     gap: 24px;
+}
+.section-advantages-item {
+    width: calc((100% - 72px) / 4);
 }
 .advantages-list-text {
     color: #434455;
@@ -150,20 +157,16 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.section-advantages {
-    margin-bottom: 120px;
-}
-/*section two*/
+.visually-hidden {
+    position: fixed;
+    transform: scale(0);
+  }
+/*section three*/
 
 .team {
     background-color: #F4F4FD;
     padding: 120px 0;
 }
-
-.visually-hidden {
-    position: fixed;
-    transform: scale(0);
-  }
   
 .team-title {
     color: #2E2F42;
@@ -185,9 +188,7 @@ ul, ol {
 .team-item {
     background-color: #FFFFFF;
 }
-.team-item-one .team-item-two{
-    width: calc((100% - 72px) / 4);
-}
+
 .team-item-title {
     color: #2E2F42;
     text-align: center;
@@ -206,7 +207,7 @@ ul, ol {
     letter-spacing: 0.02em;
 }
 
-/*section three*/
+/*section four*/
 
 .portfolio {
     background-color: #FFFFFF;
