--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ ul, ol {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     padding-top: 120px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .team-list {
@@ -187,8 +187,11 @@ ul, ol {
 }
 .team-item {
     background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
 }
-
+.item-container {
+    padding: 32px 0;
+}
 .team-item-title {
     color: #2E2F42;
     text-align: center;
