--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ ul, ol {
 
 .portfolio {
     background-color: #FFFFFF;
+    padding: 120px 0 120px 0;
 }
 
 .portfolio-title {
@@ -223,15 +224,20 @@ ul, ol {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
     padding-bottom: 120px;
     display: flex;
-    gap: 24px 80px;
+    column-gap: 24px;
+    row-gap: 48px;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
 }
 
 .portfolio-item-title {
@@ -240,6 +246,7 @@ ul, ol {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .portfolio-item-text {
@@ -248,11 +255,17 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.portfolio-item-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
 /*FOOTER*/
 
 .footer {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
 
 .footer-logo-span {
@@ -272,6 +285,8 @@ ul, ol {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     padding-bottom: 17.5px;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-text {
@@ -280,4 +295,5 @@ ul, ol {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
