--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@ ul, ol {
     background-color: #2E2F42;
     padding: 188px 0;
     display: flex;
-    
 }
 .section-title {
     color: #ffffff;
@@ -236,6 +235,8 @@ ul, ol {
     row-gap: 48px;
     flex-wrap: wrap;
     justify-content: center;
+}
+.portfolio-item {
     width: calc((100% - 48px) / 3);
 }
 
@@ -273,7 +274,7 @@ ul, ol {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    text-transform: uppercase;  
+    text-transform: uppercase;
 }
 
 .footer-logo {
@@ -284,10 +285,11 @@ ul, ol {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     padding-bottom: 17.5px;
-    display: inline-block;
     margin-bottom: 16px;
 }
-
+.footer-logo-container {
+    display: inline-block;
+}
 .footer-text {
     color: #F4F4FD;
     font-size: 16px;
