--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,7 @@ ul, ol {
     text-transform: uppercase;
     padding-bottom: 17.5px;
     margin-bottom: 16px;
+    display: inline-block;
 }
 .footer-text {
     color: #F4F4FD;
