--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,15 @@ ul, ol {
     letter-spacing: 0.02em;
 }
 .visually-hidden {
-    position: fixed;
-    transform: scale(0);
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
   }
 /*section three*/
 
