--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ ul, ol {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    display: inline-block;
 }
 
 .footer-logo {
