--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ ul, ol {
     justify-content: center;
 }
 
-.portfolio-item:first-child {
+.portfolio-item {
     width: calc((100% - 48px) / 3);
 }
 
@@ -276,7 +276,8 @@ ul, ol {
     padding: 100px 0;
 }
 
-.footer-logo-span {
+.footer-logo-span
+.footer-logo {
     color: #f4f4fd;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -288,15 +289,10 @@ ul, ol {
 
 .footer-logo {
     color: #4d5ae5;
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
     padding-bottom: 17.5px;
     margin-bottom: 16px;
-    display: inline-block;
 }
+
 .footer-text {
     color: #F4F4FD;
     font-size: 16px;
