--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,12 @@ ul, ol {
 }
 
 .container {
-    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
+}
+.header-container {
+    display: flex;
 }
 .header-navigation {
     display: flex;
@@ -114,6 +116,7 @@ ul, ol {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
+    margin: 0 auto;
 }
 
 .section-button {
@@ -128,6 +131,7 @@ ul, ol {
     border-radius: 4px;
     min-width: 169px;
     height: 56px;
+    margin: 0 auto;
 }
 .section-button:hover, .section-button:focus {
     background-color: #404BBF
@@ -163,11 +167,12 @@ ul, ol {
     width: 1px;
     height: 1px;
     margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
     border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 /*section three*/
 
@@ -183,7 +188,6 @@ ul, ol {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
@@ -236,7 +240,6 @@ ul, ol {
 }
 
 .portfolio-list {
-    padding-bottom: 120px;
     display: flex;
     column-gap: 24px;
     row-gap: 48px;
@@ -276,21 +279,24 @@ ul, ol {
     padding: 100px 0;
 }
 
-.footer-logo-span
-.footer-logo {
+.footer-logo-span {
     color: #f4f4fd;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    display: inline-block;
 }
 
 .footer-logo {
     color: #4d5ae5;
-    padding-bottom: 17.5px;
     margin-bottom: 16px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
 }
 
 .footer-text {
