--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ ul, ol {
     letter-spacing: 0.02em;
     max-width: 496px;
     margin: 0 auto;
+    padding-bottom: 48px;
 }
 
 .section-button {
